--- a/frontend/gleam.toml
+++ b/frontend/gleam.toml
@@ -16,9 +16,22 @@ target = "javascript"
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 lustre = ">= 5.4.0 and < 6.0.0"
-middle = { path = "../middle" }
 rsvp = ">= 1.1.3 and < 2.0.0"
+middle = { path = "../middle/" }
+plinth = ">= 0.8.0 and < 1.0.0"
+modem = ">= 2.1.2 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
 lustre_dev_tools = ">= 2.2.3 and < 3.0.0"
+
+[tools.lustre.build]
+minify = true
+# Build the application into our server's `priv/static` directory so it can be
+# deployed together with the backend.
+# outdir = "../server/priv/static"
+
+[tools.lustre.dev]
+host = "localhost"
+port = 1234
+proxy = { from = "/api", to = "http://localhost:8080/api" }
